# sat-tile-stack

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: LABELING_FOR_COLLABORATORS.md
engine/labeling/: convert_2019_labels.py
engine/stacking/: build_stacks.py  run_build_stacks.sh  run_build_stacks_region.sh
labeling/: README.md  app.py  index.html  labeler.py  run_labeler.py  server.py
notebooks/: cc_tutorial.ipynb  demo_stackS2.ipynb  test_feature_tracker.ipynb  test_full_workflow.ipynb  test_labeler.ipynb  test_visualize.ipynb
notebooks/.ipynb_checkpoints/: cc_tutorial-checkpoint.ipynb
sat_tile_stack/: __init__.py  append.py  bounds.py  ids.py  io.py  labeling.py  stack.py  utils.py  visualize.py
sat_tile_stack/labeling/: __init__.py  server.py
src/.ipynb_checkpoints/: __init__-checkpoint.py
src/sat_tile_stack/: __init__.py  bounds.py  sattilestack.py  stack.py  utils.py  visualize.py
src/sat_tile_stack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sat_tile_stack/.ipynb_checkpoints/: __init__-checkpoint.py  bounds-checkpoint.py  sattilestack-checkpoint.py  utils-checkpoint.py
tests/: conftest.py  test_append.py  test_bounds.py  test_io.py  test_stack.py  test_utils.py
